--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "bcrypt": "^3.0.6",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.6.2",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
